<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Header Image -->
    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/pic2" />

    <!-- App Name Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:contentDescription="@string/main1"
        app:srcCompat="@drawable/logo1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <!-- App Name Text -->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgHeader"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tasks"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <!-- RecyclerView for Task List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/btnAddTask"
        android:layout_below="@id/tvAppName"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <!-- Add Task Button -->

    <!-- Bottom Navigation View -->
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#0041CD"
        android:text="@string/add_task"
        android:textColor="#FFFFFF" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_nav_menu" />
</RelativeLayout>
